--- a/Lab 6 - BS5 From Scratch/badges.html
+++ b/Lab 6 - BS5 From Scratch/badges.html
@@ -17,7 +17,7 @@
                 <h1>Badges</h1>
             </div>
             <div class="container mt-5">
-                <h1>Example heading <span class="badge bg-secondary">New</span></h1>
+                <h1>Example heading <span class="badge bg-danger">New</span></h1>
                 <h2>Example heading <span class="badge bg-secondary">New</span></h2>
                 <h3>Example heading <span class="badge bg-secondary">New</span></h3>
                 <h4>Example heading <span class="badge bg-secondary">New</span></h4>
