--- a/Lab 1 - HTML from Scratch/meta-elements.html
+++ b/Lab 1 - HTML from Scratch/meta-elements.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="This is an example of using HTML meta tags.">
+  <meta name="keywords" content="HTML5 in Urdu, HTML5 Course">
   <meta name="author" content="Jamil">
   <meta name="robots" content="index, follow">
   <meta property="og:title" content="HTML Meta Elements">
