--- a/Lab 5 - SCSS/index.html
+++ b/Lab 5 - SCSS/index.html
@@ -4,6 +4,9 @@
     <title>SCSS | My First App</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Discover trendy and fashionable clothing at Sparrow. Shop the latest collections for men, women, and kids with exclusive discounts.">
+    <meta name="keywords" content="Sparrow, Clothing, Fashion, Men, Women, Kids, Shopping, Apparel">
+    <meta name="author" content="Sparrow Clothing">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -26,11 +29,17 @@
         </nav>
     </header>
     <main>
-        <div class="container">
-            <h1 class="heading">
-                This is my Heading 1.
-            </h1>
-        </div>
+        <section>
+            <div class="container">
+                <h1 class="heading">
+                    This is my Heading 1.
+                </h1>
+                <h2 class="heading2">This is my Heading Two</h2>
+            </div>
+            
+
+        </section>
+        
     </main>
     <footer>
 
