--- a/Lab 6 - BS5/floating-labels.html
+++ b/Lab 6 - BS5/floating-labels.html
@@ -20,15 +20,15 @@
             <div class="container">
                 <form action="" class="mt-5">
                     <div class="form-floating mb-3">
-                        <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                        <input type="email" class="form-control" tabindex="1" id="email" placeholder="name@example.com">
                         <label for="email">Email address</label>
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="password" class="form-control" id="password" placeholder="Password">
+                        <input type="password" class="form-control" tabindex="2" id="password" placeholder="Password">
                         <label for="password">Password</label>
                     </div>
                     <div class="">
-                        <button class="form-control btn btn-success">Login</button>
+                        <button class="form-control btn btn-success" tabindex="3">Login</button>
                     </div>
                 </form>
             </div>
