--- a/Lab 6 - BS5/Inline-forms.html
+++ b/Lab 6 - BS5/Inline-forms.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>Wrapping | Bootstrap 5</title>
+        <title>Inline Forms | Bootstrap 5</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -15,14 +15,16 @@
         </header>
         <main>
             <div class="container-fluid bg-primary text-white p-5 text-center">
-                <h1>Wrapping</h1>
+                <h1>Inline Forms</h1>
             </div>
             <div class="container">
                 <form action="" class="mt-4">
                     <div class="input-group flex-nowrap">
                         <span class="input-group-text" id="wrapping">@</span>
                         <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="wrapping">
-                      </div>
+                    </div>
+                    
+
                 </form>
             </div>
         </main>
