--- a/Lab 1 - HTML from Scratch/links.html
+++ b/Lab 1 - HTML from Scratch/links.html
@@ -13,6 +13,7 @@
 
 	<body>
 		<a href="headings-paragraph.html" target="_blank">Go to Headings and Paragraphs Page</a>
+		<a href="headings-paragraph.html">Go to Headings and Paragraphs Page</a>
 
 
 		<br>
